force-app/main/default/objects/cgcloud__Business_Year__c/cgcloud__Business_Year__c.object-meta.xml
<CustomObject>
    <description>This object holds the attributes of the Business Year</description>
    <label>Business Year</label>
    <nameField>
        <displayFormat>BY-{000000}</displayFormat>
        <label>Business Year Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Years</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>