force-app/main/default/objects/cgcloud__Business_Year__c/fields/cgcloud__Date_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Date_From__c</fullName>
    <description>Start Date of the Business Year.</description>
    <label>Date From</label>
    <type>Date</type>
</CustomField>