force-app/main/default/objects/cgcloud__Business_Year__c/fields/cgcloud__Date_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Date_Thru__c</fullName>
    <description>End Date of the Business Year</description>
    <label>Date Thru</label>
    <type>Date</type>
</CustomField>