force-app/main/default/objects/cgcloud__Business_Year__c/fields/cgcloud__Label__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Label__c</fullName>
    <description>Describes the Business Year for which plain is created.</description>
    <formula>TEXT( cgcloud__Year_Number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Year</label>
    <type>Text</type>
</CustomField>