force-app/main/default/objects/cgcloud__Business_Year__c/fields/cgcloud__Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Describes the Sales Organization which the Business Year belongs to.</description>
    <label>Sales Organization</label>
    <referenceTo>cgcloud__Sales_Organization__c</referenceTo>
    <relationshipLabel>Business Years</relationshipLabel>
    <relationshipName>Business_Years</relationshipName>
    <type>Lookup</type>
</CustomField>