force-app/main/default/objects/cgcloud__Business_Year__c/fields/cgcloud__Year_Number__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Year_Number__c</fullName>
    <description>Year Number used for the Business Year.</description>
    <label>Year Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>