force-app/main/default/objects/cgcloud__Business_Year__c/validationRules/cgcloud__Valid_Timeframe.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Valid_Timeframe</fullName>
    <active>true</active>
    <description>Difference between Date From and Date Thru should be 360 to 380 days</description>
    <errorConditionFormula>OR(
(cgcloud__Date_Thru__c - cgcloud__Date_From__c) &gt;= 380
,
(cgcloud__Date_Thru__c - cgcloud__Date_From__c) &lt;= 360)</errorConditionFormula>
    <errorMessage>Difference between Date From and Date Thru should be between 360 to 380 days.</errorMessage>
</ValidationRule>